script/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1676:2013249]
-A INPUT -p tcp -m set --match-set fw_block_ipports src,dst -j DROP
-A INPUT -p tcp -m set --match-set fw_allow_ipports src,dst -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m set --match-set fw_black_ips src -j DROP
-A INPUT -p tcp -m set --match-set fw_block_ports dst -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 2197 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20000:30000 -j ACCEPT
-A INPUT -s 210.239.60.44/32 -p tcp -m tcp --dport 2197 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1066 -j ACCEPT
-A INPUT -s 42.125.199.169/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2193 -j DROP
-A INPUT -p tcp -m tcp --dport 2197 -j DROP
-A INPUT -s 27.125.206.88/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 27.125.206.151/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 175.126.166.177/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 175.126.62.179/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.169/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.143/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.16/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.58/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.87/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.168/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 192.168.70.19/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 103.1.250.41/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 3306 -j DROP
-A INPUT -s 175.126.232.237/32 -p tcp -m tcp --dport 6379 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6379 -j DROP
-A INPUT -m limit --limit 3/sec --limit-burst 20 -j LOG --log-prefix "FW_DROP " --log-level 6
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
